portfolio/src/index.css
@import "tailwindcss";

@theme {
  --font-display: sans-serif;
  --breakpoint-3x1: 1920px;
  --color-primary: #ff4ecd;
  --color-secondary: #4da6ff;
  --color-accent : #111827
}

@layer base {
  html {
    font-family: var(--font-display);
    scroll-behavior: smooth;
  }
  body {
    /* background-color: #000; */
    color: #fff;
    overflow-x: hidden;
    /* -webkit-font-smoothing: antialiazed;
    -moz-osx-font-smoothing: grayscale; */
  }
  ::-webkit-scrollbar {
    width: 5px;
  }
  ::-webkit-scrollbar-track {
    background-color: #0a0a0a;
  }
  ::-webkit-scrollbar-thumb {
    background: linear-gradient(to right, rgb(64, 64, 247), rgb(236, 16, 189));
    border-radius: 7px;
  }
  ::-webkit-scrollbar-thumb:hover {
    background: linear-gradient(to right, rgb(74, 74, 238), rgb(243, 43, 200));
  }
  * {
    scrollbar-color: rgb(64, 64, 247);
  }
  .hide-scrollbar {
    /* -ms-overflow-style: none; */
    scrollbar-width: none;
  }
  .hide-scrollbar ::-webkit-scrollbar {
    display: none;
  }
  @keyframes slide {
    0% {
      background-position: 0% center;
    }
    100% {
      background-position: 200% center;
    }
  }
  @keyframes fadeIn {
    from {
      opacity: 0;
    }
    to {
      opacity: 1;
    }
  }
  @keyframes pulse {
    0%,
    100% {
      opacity: 0.3;
    }
    50% {
            opacity: 0.5;
    }
  }

  @keyframes spin {
    from {
      transform: rotate(0deg);
    }
    to {
      transform: rotate(360deg);
    }
  }
  .animate-fadeIn {
    animation: fadeIn 0.5s;
  }
  .animate-pulse {
    animation: pulse 3s ease-in-out infinite;
  }
  .animate-spin {
    animation: spin 8s linear infinite;
  }
  .line-clamp-2 {
    display: -webkit-box;
    -webkit-line-clamp: 2;
  }
}

